# LuaSDL

./: .gitignore  .gitmodules  CMakeLists.txt  LuaSDL.sln  README.md  SDL_gfx.props  SDL_image.props  SDL_mixer.props  SDL_net.props  SDL_ttf.props  libSDL.props  tolua++.props
LuaSDL/: LuaSDL.vcxproj  LuaSDL.vcxproj.filters  luasdl.c  sdllib.c  test_binding.c  test_binding.lua  test_linkage.c  tolua++.h
LuaSDL/autogen/: SDL_bind.c
LuaSDL/binding/: SDL.c
LuaSDL/binding/orig/: SDL_video.h
LuaSDL/etc/: Makefile  README  SDL_mixer-dummy.c  SDL_ttf-dummy.c
cmake/: AC_HEADER_STDC.cmake  FindAAlib.cmake  FindCACAlib.cmake  FindDirectFB.cmake  FindESD.cmake  FindFBcon.cmake  FindNASaudio.cmake  FindNTOaudio.cmake  FindNanoX.cmake  FindSVGAlib.cmake  Findartsc.cmake  Findpulseaudio.cmake  Findvgl.cmake  testArchitecture.cmake  testOS.cmake
demos/audio/: README  audio_demo.lua  mixer_demo.lua
demos/font/: LICENSE.txt  font_demo.lua
demos/image/: README  image_demo.lua  tongue-ascii.ppm  tongue-raw.ppm  tongue.pcx  tongue.tga  tongue.tif  tongue.xpm
demos/meteor_shower/: README.txt  meteor_shower.lua
demos/misc/: directories.lua  keyboard.lua  memory_test.lua  mouse.lua  template.lua  timer.lua  videoinfo.lua
demos/net/: README  http_reflector.lua  tcp_client_demo.lua  tcp_server_demo.lua
dependencies/libSDL/: CMakeLists.txt
dependencies/libSDL/docs/html/: sdlkeysym.html
dependencies/libSDL/include/: SDL_config.h.in  SDL_config_minimal.h.old
dependencies/libSDL/src/: CMakeLists.txt  CMakeLists.txt.old  prepareCMake.lua
dependencies/libSDL/src/thread/pthread/: SDL_sysmutex.c
dependencies/libSDL/src/video/caca/: SDL_cacavideo.h
dependencies/libSDL/src/video/windib/: SDL_dibevents.c
dependencies/libSDL/test/: configure  testfile.c  testgl.c  testiconv.c  testjoystick.c  testwin.c
dependencies/sdl_gfx/: CMakeLists.txt  INSTALL  Makefile.in  README  SDL_gfx.h  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  SDL_gfxPrimitives_font.h  SDL_gfx_VS2010.vcxproj  SDL_imageFilter.c  SDL_imageFilter.h  SDL_rotozoom.c  aclocal.m4  config.guess  config.sub  configure  configure.in  install-sh  ltconfig
dependencies/sdl_gfx/Docs/html/: _s_d_l__framerate_8h_source.html  _s_d_l__gfx_blit_func_8c.html  _s_d_l__gfx_blit_func_8c_source.html  _s_d_l__gfx_blit_func_8h.html  _s_d_l__gfx_blit_func_8h_source.html  _s_d_l__gfx_primitives_8c.html  _s_d_l__gfx_primitives_8c_source.html  _s_d_l__gfx_primitives_8h.html  _s_d_l__image_filter_8c.html  _s_d_l__image_filter_8c_source.html  _s_d_l__image_filter_8h.html  _s_d_l__image_filter_8h_source.html  _s_d_l__rotozoom_8c.html  _s_d_l__rotozoom_8c_source.html  functions_vars.html  globals.html  globals_0x7a.html  globals_defs.html  globals_func.html  globals_func_0x61.html  globals_func_0x66.html  globals_func_0x74.html  index.html  jquery.js  struct_f_p_smanager.html  struct_s_d_l__gfx_blit_info.html  structt_color_r_g_b_a.html
dependencies/sdl_gfx/Fonts/: 10x20.fnt
dependencies/sdl_gfx/Test/: LaplaceRelaxation_VS2010.vcxproj  Makefile.in  TestABGR_VS2010.vcxproj  TestFonts_VS2010.vcxproj  TestFramerate_VS2010.vcxproj  TestGfxBlit.c  TestGfxBlit_VS2010.vcxproj  TestGfxPrimitives.c  TestGfxPrimitives_VS2010.vcxproj  TestGfxTexture.c  TestGfxTexture_VS2008.vcproj  TestGfxTexture_VS2010.vcxproj  TestImageFilter_VS2010.vcxproj  TestRotozoom_VS2010.vcxproj  TestShrink.c  TestShrink_VS2008.vcproj  TestShrink_VS2010.vcxproj  aclocal.m4  config.guess  configure  install-sh  ltconfig  ltmain.sh  missing
dependencies/sdl_image/: CMakeLists.txt  IMG_tif.c
dependencies/sdl_mixer/: CMakeLists.txt
dependencies/sdl_net/: CMakeLists.txt
dependencies/sdl_ttf/: CMakeLists.txt
dependencies/tolua++-1.0.93/: CMakeLists.txt
dependencies/tolua++-1.0.93/include/: tolua++.h
dependencies/tolua++-1.0.93/src/: CMakeLists.txt
dependencies/tolua++-1.0.93/win32/vc7/: UpgradeLog.XML  toluapp.sln  toluapp.vcproj  toluapp.vcproj.7.10.old
docs/: README-SDL.txt  README-SDL_image.txt  README-SDL_mixer.txt  README-SDL_net.txt  README-SDL_ttf.txt  license-mikmod.txt  luasdl.html
src/: CMakeLists.txt  DejaVu-Sans-Mono-13.c  luasdl.version  preparedefs.lua  sdllib.c  sdllib.h
src/autogen/: SDL_bind.c  SDL_bind.h
src/binding/: README  SDL.c
src/binding/orig/: SDL_stdinc.h
